maj des supports

--- a/01-DonneesVelov.ipynb
+++ b/01-DonneesVelov.ipynb
@@ -160,7 +160,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "donnees_velov = pd.DataFrame(data=reponse_api)"
+    "import pandas as pd\n",
+    "donnees_velov = pd.DataFrame(data=reponse_api)\n",
+    "donnees_velov"
    ]
   },
   {
