--- a/02-ZoneDesservie.ipynb
+++ b/02-ZoneDesservie.ipynb
@@ -1,8 +1,9 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "de472fdb-5396-46ce-9201-04681792dba8",
+   "id": "0bc3be16-f91b-4e3e-a1ff-16be411410d5",
    "metadata": {},
    "source": [
     "# Cahier des charges\n",
@@ -15,36 +16,61 @@
     "## Couche de polygones attendue \n",
     "![Couche de polygones attendue](img/zone_desservie.png \"Couche de polygones attendue\")\n",
     "\n",
-    "# Algorithmie\n",
-    "\n",
-    "Voici quelques grandes étapes pour vous aider à réaliser cet objectif. Ces étapes ne sont pas obligatoires, vous pouvez décider de procéder complètement autrement si vous le souhaitez.\n",
-    "\n",
-    "## 1. Charger le fichier des stations\n",
-    "On cherche à charger dans une variable le tableau des stations créé à l'étape précédente.\n",
-    "\n",
-    "## 2. Filtrer les stations avec au moins 1 vélos disponibles\n",
-    "On ne va conserver que les lignes du tableau qui correspondent aux stations ayant au moins un vélo disponible. \n",
-    "\n",
-    "## 3. Réaliser des buffers autour des stations\n",
-    "On réalise de buffers de 500m autour des stations.\n",
-    "\n",
-    "## 4. Fusionner ces buffers\n",
-    "On veux transformer les buffers autour de chaque station en grandes zones desservies. Il faut donc faire une union. \n",
-    "\n",
-    "## 5. Exporter les zones desservies\n",
-    "On cherche à exporter les zones desservies dans un format lisible par un SIG.\n",
-    "\n",
     "# Programmation\n",
     "## 1. Charger le fichier des stations avec geopandas\n",
-    "On cherche à charger dans une variable python le tableau des stations créé à l'étape précédente.\n",
-    "\n",
+    "On cherche à charger dans une variable python le tableau des stations créé à l'étape précédente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cf890d9-2ac3-45f8-a12b-6882bdf9ec42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9d90b9e-234e-4cb6-b18d-818c71139a0b",
+   "metadata": {},
+   "source": [
     "## 2. Filtrer les stations avec au moins 1 vélos disponibles\n",
     "Les GeoDataFrame *geopandas* héritent des DataFrame *pandas*. Cela signifie que toutes les méthodes d'un DataFrame classique sont utilisables avec un GeoDataFrame. \n",
-    "La méthode la plus efficace pour faire le subset est donc quelque part dans la [pandas cheatsheet](https://pandas.pydata.org/Pandas_Cheat_Sheet.pdf). \n",
-    "\n",
+    "La méthode la plus efficace pour faire le subset est donc quelque part dans la [pandas cheatsheet](https://pandas.pydata.org/Pandas_Cheat_Sheet.pdf). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6d8428f-60b4-4110-977d-c2467f8e211c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94430923-f681-4a77-9b42-9199f4599806",
+   "metadata": {},
+   "source": [
     "## 3. Réaliser des buffers avec geopandas\n",
-    "Pour faire des buffers autour des points des stations, il existe une méthode de GeoDataFrame. Attention : cette méthode ne renvoie pas un GeoDataFrame, mais une GeoSerie. Cela signifie que nous obtenons juste une liste de géométries sans attributs. Si on souhaite conserver ces attributs, il faudra affecter le résultat de la méthode à un nouveau champ du GeoDataFrame original\n",
-    "\n",
+    "Pour faire des buffers autour des points des stations, il existe une méthode de GeoDataFrame. Attention : cette méthode ne renvoie pas un GeoDataFrame, mais une GeoSerie. Cela signifie que nous obtenons juste une liste de géométries sans attributs. Si on souhaite conserver ces attributs, il faudra affecter le résultat de la méthode à un nouveau champ du GeoDataFrame original"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43aac4d9-e2b0-47d1-a6fe-4a137112db38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77de9f61-425a-458e-b55c-75d506d3adce",
+   "metadata": {},
+   "source": [
     "## 4. Fusionner ces buffers avec shapely\n",
     "Pour réaliser une union de la liste de buffers, on peux utiliser une fonction fournie par le package shapely. Elle peux prendre directement la GeoSerie en argument.\n",
     "Cette fonction renvoie un unique MultiPolygon. Pour transformer ce MultiPolygon en liste de polygones simples : "
@@ -53,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fdab8d4-c8ae-42ae-ba34-23d968d55748",
+   "id": "3d9d941c-942b-43f4-a717-f0b457c6672f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,6 +114,14 @@
    "source": [
     "On peux ensuite écrire ce GeoDataFrame sur le disque dur."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ecd9b54-7928-49fd-a54c-5cfc3f36eec9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
