--- a/04-CartoNombreVelos.ipynb
+++ b/04-CartoNombreVelos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "12f48171-4918-4685-9be3-8ffa6d007632",
+   "id": "d8caac9c-8d81-44ac-bbc2-7ffe1184c1e6",
    "metadata": {},
    "source": [
     "# Cahier des charges\n",
@@ -11,8 +11,6 @@
     "| --- | --- |\n",
     "| Objectif | Réaliser une couche raster du nombre de vélos disponibles dans un rayon de 500m à partir des données de l'API. |\n",
     "| Contraintes | - Utiliser le package *rasterio*<br>- La couche doit couvrir toute zone située à moins de 5km d'une station Velo'V<br>- La résolution spatiale doit être de 50m |\n",
-    "\n",
-    "Pour vous aider, un *template raster* de la bonne taille et à la bonne résolution, initialisé avec des zéros, est disponible dans ```datasets/template_raster.tif```\n",
     "\n",
     "## Résultat attendu\n",
     "![Raster du nombre de vélos](img/nb_velos.png \"Raster du nombre de vélos attendu\")\n",
@@ -52,14 +50,56 @@
     "> ⚠️ La méthode présentée ici n'est pas optimale en production, mais a été choisie pour sa simplicité algorithmique\n",
     "\n",
     "## 1. Récupérer toutes les stations Vélo'V\n",
-    "Refaire comme pour les objectifs précédents. Pas besoin de filtrage cette fois-ci.\n",
-    "\n",
+    "Refaire comme pour les objectifs précédents. Pas besoin de filtrage cette fois-ci."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85c079df-027a-4651-be28-3e4c86d1982e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "259fe58d-65db-4212-8670-511478ce0fc9",
+   "metadata": {},
+   "source": [
     "## 2. Créer un raster aux bonnes dimensions et résolutions\n",
-    "Reprendre la méthode de l'objectif 3 (utiliser le template_raster).\n",
-    "\n",
+    "Reprendre la méthode de l'objectif 3 (utiliser le template_raster)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "750c0ee7-73fe-47e9-99fb-a7378ef75014",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab7390f6-dbf3-4050-bbf1-c3cb334d07f4",
+   "metadata": {},
+   "source": [
     "## 3. Réaliser un masque des zones à plus de 5km d'une station\n",
-    "Reprendre la méthode de l'objectif 3 ou charger simplement le fichier vectoriel si vous l'avez enregistré sur le disque.\n",
-    "\n",
+    "Reprendre la méthode de l'objectif 3 ou charger simplement le fichier vectoriel si vous l'avez enregistré sur le disque."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dac2f97c-fa16-40e8-803d-41e541fe6d1a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "483f703f-c20d-4757-baff-d7c5e8a1566c",
+   "metadata": {},
+   "source": [
     "## 4. Calculer chaque pixel\n",
     "Pour cette étape, on va réaliser une itération double : sur chaque ligne du raster, puis sur chaque colonne.\n",
     "\n",
@@ -71,10 +111,80 @@
     "On cherche à faire la somme de la colonne *num_bikes_available* du tableau filtré. La méthode pour faire cela avec un *pandas.DataFrame* est très simple à trouver.\n",
     "\n",
     "### 4.3. Assigner cette somme à la valeur du pixel\n",
-    "Reprendre la méthode de l'objectif 3.\n",
-    "\n",
+    "Reprendre la méthode de l'objectif 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dac632ff-ffe1-400b-aad8-d306893dabd1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd3331c5-2fb6-4781-8f16-4759c9df3dc4",
+   "metadata": {},
+   "source": [
     "## 5. Ecrire le raster en sortie sur le disque\n",
     "Reprendre la méthode de l'objectif 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e004732b-cdcb-4488-91f7-e27ee1afdc05",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b403925b-f748-4ee7-b803-1ec725da076e",
+   "metadata": {},
+   "source": [
+    "# Autre algorithme plus optimisé\n",
+    "\n",
+    "Plutôt que d'itérer sur les pixels, il est plus optimal d'itérer sur les stations et de mettre à jour tous les pixels autour de chaque station lors de chaque itération.\n",
+    "\n",
+    "Toujours dans un soucis d'optimisation, on peux au préalable filtrer les stations qui n'ont aucun vélo disponible afin d'économiser quelques itérations.\n",
+    "\n",
+    "Dans la boucle, il faudra utiliser rasterio.features.geometry_mask pour créer un masque raster aux bonnes dimensions autour de la station. Ensuite, on utilisera numpy pour faire de la \"calculatrice raster\" entre notre masque et le raster complet à mettre à jour."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d7f4393-9498-411e-9800-6fbd9a165f04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On ouvre le template raster\n",
+    "with rio.open('datasets/output/template_raster.tif') as src:\n",
+    "    profile = src.profile\n",
+    "    data = src.read(1)\n",
+    "\n",
+    "    # On itère sur chaque station avec plus d'un vélo\n",
+    "    for _, row in filtered_gdf.iterrows():\n",
+    "\n",
+    "        # On fait un buffer de 500m autour de la station\n",
+    "        \n",
+    "\n",
+    "        # On extrait le nombre de vélos dispos\n",
+    "        \n",
+    "\n",
+    "        # On fait un \"masque\" du buffer\n",
+    "        \n",
+    "        \n",
+    "        # On l'inverse pour qu'il soit \"True\" dans le buffer\n",
+    "        \n",
+    "\n",
+    "        # On multiplie le masque par le nombre de vélos avec numpy\n",
+    "        \n",
+    "\n",
+    "        # On additionne ce tableau numpy au total\n",
+    "        "
    ]
   }
  ],
