--- a/03-CartoVelosProches.ipynb
+++ b/03-CartoVelosProches.ipynb
@@ -12,8 +12,6 @@
     "| Objectif | Réaliser une couche raster de la distance au vélo disponible le plus proche à partir des données de l'API. |\n",
     "| Contraintes | - Utiliser le package *rasterio*<br>- La couche doit couvrir toute zone située à moins de 5km d'une station Velo'V<br>- La résolution spatiale doit être de 50m |\n",
     "\n",
-    "Pour vous aider, un *template raster* de la bonne taille et à la bonne résolution, initialisé avec des zéros, est disponible dans ```datasets/template_raster.tif```\n",
-    "\n",
     "## Résultat attendu\n",
     "![Raster de distance attendu](img/distance.png \"Raster de distance attendu\")\n",
     "\n",
@@ -70,7 +68,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stations_points = MultiPoint(list(filtered_gdf.geometry))"
+    "import geopandas as gpd\n",
+    "from shapely.geometry import MultiPoint\n",
+    "\n",
+    "gdf_stations = gpd.read_file('datasets/output/stations.gpkg')\n",
+    "filtered_gdf = gdf_stations.query('num_bikes_available >= 1')\n",
+    "\n",
+    "stations_points = MultiPoint(list(filtered_gdf.geometry))\n",
+    "stations_points"
    ]
   },
   {
@@ -79,79 +84,52 @@
    "metadata": {},
    "source": [
     "## 2. Créer un raster aux bonnes dimensions et résolutions\n",
-    "On va utiliser rasterio pour créer le raster. Il est possible de le faire entièrement en Python, mais dans premier temps, nous allons utiliser un raster \"template\". "
+    "On va utiliser rasterio pour créer le raster."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "fbf09df3-3a08-4ec5-a0c2-d27b47342ea8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'driver': 'GTiff', 'dtype': 'float32', 'nodata': 255.0, 'width': 652, 'height': 771, 'count': 1, 'crs': CRS.from_epsg(3857), 'transform': Affine(50.0, 0.0, 526943.6377,\n",
-      "       0.0, -50.0, 5765599.8051), 'blockysize': 3, 'tiled': False, 'interleave': 'band'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import rasterio as rio\n",
-    "\n",
-    "# Charger les métadonnées du raster\n",
-    "src = rio.open('datasets/template_raster.tif')\n",
-    "\n",
-    "# Afficher le profil du raster\n",
-    "profile = src.profile\n",
-    "print(profile)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "6c5e3e22-59da-4bcd-9327-64eda1c3370e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " ...\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Charger les données du raster\n",
-    "data = src.read(1)\n",
-    "print(data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b629af66-8ca7-4546-8790-76fc2c071bc2",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "Il faut bien penser à stocker le profil du raster pour pouvoir en enregistrer un nouveau identique à la fin de notre programme. Une fois les données chargées en mémoire vive (assignées à une variable python), on peut fermer le template_raster :"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "61830fdd-9ffb-43f4-beb5-02d4268abbea",
+   "execution_count": null,
+   "id": "8ed1209c-10ef-4a90-bc02-4f76eac18d53",
    "metadata": {},
    "outputs": [],
    "source": [
-    "src.close()"
+    "import rasterio as rio\n",
+    "import numpy as np\n",
+    "\n",
+    "resolution = 50\n",
+    "crs = rio.CRS.from_epsg(gdf_stations.crs.to_epsg())\n",
+    "\n",
+    "# On créé la bounding box voulue pour notre raster\n",
+    "bbox = stations_points.envelope.buffer(5000).bounds\n",
+    "\n",
+    "# On arrondis les valeurs à un multiple de la résolution voulue\n",
+    "bbox = [(coord//resolution)*resolution for coord in bbox]\n",
+    "\n",
+    "# On calcule la taille (en pixels) de notre raster\n",
+    "bbox_size = (int((bbox[2]-bbox[0]) / resolution), # max_x - min_x\n",
+    "             int((bbox[3]-bbox[1]) / resolution)) # max_y - min_y\n",
+    "\n",
+    "# On créé la transformation Affine (pour passer des coordonnées images aux coordonnée projetées)\n",
+    "transform=rio.transform.from_bounds(*bbox, width=bbox_size[0], height=bbox_size[1])\n",
+    "\n",
+    "# On créé le profil minimal du raster pour que rasterio sache quoi créer\n",
+    "profile = {\n",
+    "    'driver': 'GTiff', \n",
+    "    'dtype': 'float32', \n",
+    "    'nodata': 255.0, \n",
+    "    'width': bbox_size[0], \n",
+    "    'height': bbox_size[1], \n",
+    "    'count': 1, \n",
+    "    'crs': crs, \n",
+    "    'transform': transform,\n",
+    "}\n",
+    "\n",
+    "# Et enfin, on créé un array numpy de la bonne taille et on l'enregistre dans un raster template rempli de zéros\n",
+    "data = np.zeros(bbox_size)\n",
+    "\n",
+    "with rio.open('datasets/output/template_raster.tif', 'w', **profile) as template:\n",
+    "    template.write(data, 1)"
    ]
   },
   {
@@ -173,12 +151,25 @@
    "outputs": [],
    "source": [
     "from rasterio.features import geometry_mask\n",
+    "from matplotlib import pyplot\n",
     "\n",
     "# On fait un buffer de 5km autour des stations pour réaliser le masque\n",
     "buffers = gdf_stations.buffer(5000)\n",
     "\n",
     "# On réalise le masque (on fait appel aux métadonnées du template raster pour que le masque soit à la bonne taille)\n",
-    "mask = geometry_mask(list(buffers), src.shape, src.transform)"
+    "mask = geometry_mask(list(buffers), template.shape, template.transform)\n",
+    "\n",
+    "pyplot.imshow(mask, cmap='Blues')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bd79fae-fc0e-41f0-b98a-9f216ccab1d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Enregistrez ce masque dans un fichier\n"
    ]
   },
   {
@@ -197,14 +188,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from shapely.geometry import Point\n",
+    "from shapely.ops import nearest_points\n",
+    "\n",
     "# On itère sur chaque ligne du raster\n",
-    "for row in range(src.shape[0]):\n",
+    "for row in range(profile['height']):\n",
     "    # On itère sur chaque colonne du raster\n",
-    "    for col in range(src.shape[1]):\n",
+    "    for col in range(profile['width']):\n",
     "        # Pour vérifier si le pixel est masqué ou non\n",
-    "        if mask[row, col]:\n",
+    "        if mask[row, col]: # Si le pixel est masqué\n",
     "            # Pour modifier la valeur du pixel actuel sur le raster\n",
-    "            data[row, col] = valeur"
+    "            data[row, col] = profile['nodata']\n",
+    "            \n",
+    "        else: # Si le pixel n'est pas masqué\n",
+    "            # A vous de compléter pour extraire la distance\n",
+    "\n",
+    "\n",
+    "            # Pour modifier la valeur du pixel actuel sur le raster\n",
+    "            data[row, col] = distance"
    ]
   },
   {
@@ -223,16 +224,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "current_point = Point(src.xy(row, col))"
+    "pixel_point = Point(src.xy(150, 150)) # Point(src.xy(<row>, <col>))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1a7ff5e5-5aa9-47a1-8246-63a8cdd8403f",
+   "id": "e49c0971-7f01-4dc4-bbe5-efa514a8f1ff",
    "metadata": {},
    "source": [
-    "On peux ensuite chercher le point le plus proche avec ```shapely.ops.nearest_points```. Cette fonction renvoie une paire de points stockée dans un tuple.\n",
-    "\n",
+    "On peux ensuite chercher le point le plus proche avec ```shapely.ops.nearest_points```. Cette fonction renvoie une paire de points stockée dans un tuple. Un des deux points correspond au pixel, l'autre à la station la plus proche."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ba549be-5dc1-47ae-88e3-5667ae96dcde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nearest = nearest_points(pixel_point, stations_points)\n",
+    "nearest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef0133cf-5acb-433e-8326-001810db21a5",
+   "metadata": {},
+   "source": [
     "### 4.2. Mesurer la distance à cette station\n",
     "Pour mesurer la distance entre le point central du pixel et la station trouvée en 4.1, on peux utiliser une méthode des objets ```shapely.Point```. \n",
     "\n",
