Update API URL and jupyter requirements

--- a/content/01-DonneesVelov.ipynb
+++ b/content/01-DonneesVelov.ipynb
@@ -80,7 +80,7 @@
     "import requests\n",
     "\n",
     "# On récupère les données\n",
-    "reponse = requests.get(url='https://transport.data.gouv.fr/gbfs/lyon/station_status.json')\n",
+    "reponse = requests.get(url='https://download.data.grandlyon.com/files/rdata/jcd_jcdecaux.jcdvelov/station_status.json')\n",
     "\n",
     "# La fonction get du package requests va renvoyer un objet de type Reponse\n",
     "print(reponse)"
