Tests for 01-DonneesVeloV

--- a/content/01-DonneesVelov.ipynb
+++ b/content/01-DonneesVelov.ipynb
@@ -175,19 +175,7 @@
     "tags": []
    },
    "source": [
-    "Si cela ne fonctionne pas, il faudra éplucher la [documentation](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html) sur la manière de créer un DataFrame à partir de nos données. \n",
-    "\n",
-    "A ce stade, il est conseillé d'explorer un peu les données pour s'assurer qu'elles sont correctement récupérées. On peux, par exemple, faire un boxplot pour le nombre de vélos actuellement disponibles par station comme ci-desous."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce11cb2b-75d4-4c56-afb2-e3f4ae8879ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph_chronique = donnees_velov.boxplot(column=['num_bikes_available', 'num_docks_available'], rot=45)"
+    "Si cela ne fonctionne pas, il faudra éplucher la [documentation](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html) sur la manière de créer un DataFrame à partir de nos données. "
    ]
   },
   {
@@ -252,6 +240,22 @@
    "source": [
     "gdf_velov = gpd.read_file('datasets/output/stations.gpkg')\n",
     "gdf_velov.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfb02b79",
+   "metadata": {},
+   "source": [
+    "## 4. Enregistrer les données dans une base de données PostgreSQL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7cc434d",
+   "metadata": {},
+   "source": [
+    "## 5. Ecrire les tests et les fonctions du module data"
    ]
   }
  ],
