--- a/content/02-ZoneDesservie.ipynb
+++ b/content/02-ZoneDesservie.ipynb
@@ -122,6 +122,21 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e0f7cd5-ccc2-4fbc-9c18-356d33ee60ef",
+   "metadata": {},
+   "source": [
+    "## 6. Compléter le module desserte.py\n",
+    "\n",
+    "Complétez le fichier `pyvelov/desserte.py` pour que toutes les fonctions passent les tests présents dans `tests/test_02-ZoneDesservie.py`. Cette fois-ci, c'est également à vous de rédiger les tests ! Pour rappel, les tests se lancent dans un terminal (pas une console python) avec la commande : \n",
+    "```sh \n",
+    "pytest tests/test_02-ZoneDesservie.py\n",
+    "```\n",
+    "\n",
+    "Un bon développeur commence toujours par rédiger les tests ;-)"
+   ]
   }
  ],
  "metadata": {
@@ -140,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
