--- a/content/01-DonneesVelov.ipynb
+++ b/content/01-DonneesVelov.ipynb
@@ -16,7 +16,7 @@
     "| Fonction | Exporter des objets exploitables dans un SIG |\n",
     "| --- | --- |\n",
     "| Objectif | Obtenir des données vectorielles ponctuelles sur les stations Vélo'V en temps réel |\n",
-    "| Contraintes | - Export au format *shapefile* ou *geopackage* <br>- Utiliser le package *geopandas* <br>- Exporter dans un système de coordonnées projetées |\n",
+    "| Contraintes | - Export au format *shapefile* ou *geopackage* <br>- Exporter dans une base de données *PostGIS* ou *SpatiaLite* <br>- Utiliser le package *geopandas* <br>- Exporter dans un système de coordonnées projetées |\n",
     "\n",
     "## Couche de points attendue \n",
     "![Couche de points attendue](img/stations.png \"Couche de points attendue\")\n",
@@ -62,7 +62,7 @@
     "\n",
     "# Programmation\n",
     "\n",
-    "Ci-dessous, vous trouverez des éléments qu ipeuvent vous aider à programmer votre algorithme.\n",
+    "Ci-dessous, vous trouverez des éléments qui peuvent vous aider à programmer votre algorithme.\n",
     "\n",
     "## 1. Récupération des données via l'API\n",
     "\n",
@@ -247,7 +247,88 @@
    "id": "cfb02b79",
    "metadata": {},
    "source": [
-    "## 4. Enregistrer les données dans une base de données PostgreSQL"
+    "## 4. Enregistrer les données dans une base de données PostgreSQL\n",
+    "\n",
+    "Pour pouvoir utiliser les données hors ligne, on souhaite enregistrer deux tables dans une base de données PostrgreSQL/PostGIS : \n",
+    "- Table `stations` contenant les colonnes ['station_id', 'name', 'capacity', 'geometry']\n",
+    "- Table `status` contenant les colonnes ['station_id', 'num_bikes_available', 'num_docks_available', 'last_reported'] (sans géométrie)\n",
+    "\n",
+    "(si la base de données PostGIS installée sur votre machine n'est pas accessible, vous pouvez utiliser une base de données SpatialLite)\n",
+    "\n",
+    "On utilise la librairie SQLAlchemy pour créer un DB engine."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd6534fa-d032-45f4-ac75-378998ab5d83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Avec PostGIS\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "engine = create_engine(\"postgresql://pyvelov:very_secure_password@localhost:5432/pyvelov\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2459cc40-33f7-4878-a7a6-ce2cff260814",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## OU avec SpatiaLite\n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy.event import listen\n",
+    "from geoalchemy2 import load_spatialite\n",
+    "\n",
+    "engine = create_engine(\"sqlite:///pyvelov.db\") \n",
+    "listen(engine, \"connect\", load_spatialite)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b0ab3d9-2162-4763-85e2-1379cda4b182",
+   "metadata": {},
+   "source": [
+    "On peut ensuite enregistrer les données."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f89fc27b-0d62-4f3e-9b6f-243ac5fef90f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GeoPandas sait ensuite enregistrer directement dans une BD PostGIS comme ceci\n",
+    "gdf_velov.to_postgis('stations', engine, if_exists='replace')\n",
+    "\n",
+    "# Pour un tableau Pandas sans extension spatiale\n",
+    "donnees_velov.to_sql('status', con=engine, if_exists='replace', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba97110f-f798-4ed3-8be1-6e11709a3dd1",
+   "metadata": {},
+   "source": [
+    "Et les récupérer comme ceci."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16ec2400-3b0d-46e0-b485-0f3f9a3961cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pour une table avec géométries spatiales\n",
+    "gdf_velov = gpd.read_postgis(\"SELECT * FROM stations\", engine, geom_col='geometry')\n",
+    "\n",
+    "# Pour une table sans géométries\n",
+    "donnees_velov = pd.read_sql(\"SELECT * FROM status\", engine)"
    ]
   },
   {
@@ -255,7 +336,14 @@
    "id": "f7cc434d",
    "metadata": {},
    "source": [
-    "## 5. Ecrire les tests et les fonctions du module data"
+    "## 5. Ecrire les tests et les fonctions du module data\n",
+    "\n",
+    "Dans le dossier pyvelov, un module data.py contient un début de code pour toutes les fonctions attendues. A vous de le compléter pour que toutes les fonctions passent les tests avec succès. \n",
+    "\n",
+    "Les tests sont dans le fichier tests/test_01-DonneesVelov.py. Ils se lancent en tapant dans un terminal la commande suivante : \n",
+    "```sh\n",
+    "pytest tests/test_01-DonneesVeloV.py\n",
+    "```"
    ]
   }
  ],
@@ -275,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
