--- a/content/04-CartoNombreVelos.ipynb
+++ b/content/04-CartoNombreVelos.ipynb
@@ -186,6 +186,14 @@
     "        # On additionne ce tableau numpy au total\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0c9913b-c82a-48e5-9770-76e46046950e",
+   "metadata": {},
+   "source": [
+    "Utiliser plutôt cet algorithme pour le package pyvelov."
+   ]
   }
  ],
  "metadata": {
@@ -204,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
