Retrait des tests

--- a/content/01-DonneesVelov.ipynb
+++ b/content/01-DonneesVelov.ipynb
@@ -210,7 +210,7 @@
    "source": [
     "reponse = requests.get('<URL>')\n",
     "\n",
-    "infos_stations = pd.DataFrame(reponse.json()['data']['stations'])"
+    "infos_stations = pd.DataFrame(reponse.json()['value'])"
    ]
   },
   {
@@ -336,14 +336,9 @@
    "id": "f7cc434d",
    "metadata": {},
    "source": [
-    "## 5. Ecrire les tests et les fonctions du module data\n",
+    "## 5. Ecrire les fonctions du module data\n",
     "\n",
-    "Dans le dossier pyvelov, un module data.py contient un début de code pour toutes les fonctions attendues. A vous de le compléter pour que toutes les fonctions passent les tests avec succès. \n",
-    "\n",
-    "Les tests sont dans le fichier tests/test_01-DonneesVelov.py. Ils se lancent en tapant dans un terminal la commande suivante : \n",
-    "```sh\n",
-    "pytest tests/test_01-DonneesVeloV.py\n",
-    "```"
+    "Dans le dossier pyvelov, un module data.py contient un début de code pour toutes les fonctions attendues. A vous de le compléter pour que toutes les fonctions renvoient les données demandées."
    ]
   }
  ],
