--- a/content/02-ZoneDesservie.ipynb
+++ b/content/02-ZoneDesservie.ipynb
@@ -130,12 +130,7 @@
    "source": [
     "## 6. Compléter le module desserte.py\n",
     "\n",
-    "Complétez le fichier `pyvelov/desserte.py` pour que toutes les fonctions passent les tests présents dans `tests/test_02-ZoneDesservie.py`. Cette fois-ci, c'est également à vous de rédiger les tests ! Pour rappel, les tests se lancent dans un terminal (pas une console python) avec la commande : \n",
-    "```sh \n",
-    "pytest tests/test_02-ZoneDesservie.py\n",
-    "```\n",
-    "\n",
-    "Un bon développeur commence toujours par rédiger les tests ;-)"
+    "Complétez le fichier `pyvelov/desserte.py` pour que toutes les fonctions renvoient les données demandées."
    ]
   }
  ],
